--- a/views/index.jade
+++ b/views/index.jade
@@ -62,31 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/317063965085497')
-                p So, you want to build a Bluetooth Heartrate Monitor or iBeacon App? By @Mugunth
-                  span on 28 Mar, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/494844050627479')
-                p Friday Hacks #68
-                  span on 28 Mar, Fri
-                p.tagline by NUS Hackers
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170449392/')
-                p MOOC Study Group @ Data Science SG
-                  span on 29 Mar, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170447662/')
-                p DataScience SG Meetup - Diving Into The Data Science Industry
-                  span on 29 Mar, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='https://www.facebook.com/events/667530956626605')
-                p MOOC World Arduino Day
-                  span on 29 Mar, Sat
-                p.tagline by Singapore Makers
-            li
               a(href='http://www.meetup.com/Agile-Singapore/events/168931192/')
                 p Coding Dojo: Legacy Code (C# and Java)
                   span on 2 Apr, Wed
@@ -111,11 +86,26 @@ html(lang='en')
                 p April Meetup
                   span on 10 Apr, Thu
                 p.tagline by AWS User Group Singapore
-            //- li
-            //-   a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
-            //-     p PUGS April Meetup
-            //-       span on 16 Apr, Wed
-            //-     p.tagline by PUGS (Postgres Users Group Singapore)
+            li
+              a(href='http://www.meetup.com/Hadoop-SG/events/174054202/')
+                p Hue presentation by Enrico Berti
+                  span on 10 Apr, Thu
+                p.tagline by Hadoop.SG
+            li
+              a(href='http://www.meetup.com/HASKELL-SG/events/173458152/')
+                p New Directions in String Interpolation
+                  span on 11 Apr, Fri
+                p.tagline by Haskell.SG
+            li
+              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
+                p PUGS April Meetup
+                  span on 16 Apr, Wed
+                p.tagline by PUGS (Postgres Users Group Singapore)
+            li
+              a(href='https://www.facebook.com/events/677139548999668')
+                p Front end developer meetup
+                  span on 28 Apr, Mon
+                p.tagline by Frontend Developers Singapore
 
         section
           h3 open source
