--- a/views/index.jade
+++ b/views/index.jade
@@ -62,25 +62,20 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/Agile-Singapore/events/168931192/')
-                p Coding Dojo: Legacy Code (C# and Java)
-                  span on 2 Apr, Wed
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/171009392/')
-                p Arpil 2014 Meetup
-                  span on 2 Apr, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/168931082/')
-                p Mar/2014 - Open Space
-                  span on 2 Apr, Wed
-                p.tagline by Agile Singapore
+              a(href='https://www.facebook.com/events/233871373481071')
+                p Friday Hacks #69 - Quest for the optimal algorithm
+                  span on 4 Apr, Fri
+                p.tagline by NUS Hackers
             li
               a(href='http://www.meetup.com/Singapore-Android-Developers/events/171218832/')
                 p Samsung Developer Day, Singapore
                   span on 5 Apr, Sat
                 p.tagline by Singapore Android Developers
+            li
+              a(href='https://www.facebook.com/events/1466215253596302')
+                p Creative Crew Talks - April Meeting 2014
+                  span on 8 Apr, Apr
+                p.tagline by Creative Crew
             li
               a(href='http://www.meetup.com/AWS-SG/events/171179052/')
                 p April Meetup
@@ -92,6 +87,11 @@ html(lang='en')
                   span on 10 Apr, Thu
                 p.tagline by Hadoop.SG
             li
+              a(href='http://www.meetup.com/devops-singapore/events/174835492/')
+                p Meetup #19: Automating Jenkins
+                  span on 10 Apr, Thu
+                p.tagline by DevOps Singapore
+            li
               a(href='http://www.meetup.com/HASKELL-SG/events/173458152/')
                 p New Directions in String Interpolation
                   span on 11 Apr, Fri
@@ -101,11 +101,7 @@ html(lang='en')
                 p PUGS April Meetup
                   span on 16 Apr, Wed
                 p.tagline by PUGS (Postgres Users Group Singapore)
-            li
-              a(href='https://www.facebook.com/events/677139548999668')
-                p Front end developer meetup
-                  span on 28 Apr, Mon
-                p.tagline by Frontend Developers Singapore
+
 
         section
           h3 open source
