events and next podcast

--- a/views/index.jade
+++ b/views/index.jade
@@ -62,16 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/233871373481071')
-                p Friday Hacks #69 - Quest for the optimal algorithm
-                  span on 4 Apr, Fri
-                p.tagline by NUS Hackers
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/171218832/')
-                p Samsung Developer Day, Singapore
-                  span on 5 Apr, Sat
-                p.tagline by Singapore Android Developers
-            li
               a(href='https://www.facebook.com/events/1466215253596302')
                 p Creative Crew Talks - April Meeting 2014
                   span on 8 Apr, Apr
@@ -101,6 +91,31 @@ html(lang='en')
                 p PUGS April Meetup
                   span on 16 Apr, Wed
                 p.tagline by PUGS (Postgres Users Group Singapore)
+            li
+              a(href='https://www.facebook.com/events/380277858780590')
+                p iOS Dev Scout April Meetup
+                  span on 17 Apr, Thu
+                p.tagline by iOS DevScout
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
+                p R vs Python (Merged with Musings of a Kaggler)
+                  span on 23 Apr, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
+                p R vs Python (Merged with Musings of a Kaggler)
+                  span on 23 Apr, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171898992/')
+                p MOOC Study Group @ Data Science SG
+                  span on 26 Apr, Sat
+                p.tagline by DataScience SG
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170832262/')
+                p DataScience SG Meetup -Social Media Analytics
+                  span on 26 Apr, Sat
+                p.tagline by DataScience SG
 
 
         section
