--- a/views/index.jade
+++ b/views/index.jade
@@ -62,31 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/1466215253596302')
-                p Creative Crew Talks - April Meeting 2014
-                  span on 8 Apr, Apr
-                p.tagline by Creative Crew
-            li
-              a(href='http://www.meetup.com/AWS-SG/events/171179052/')
-                p April Meetup
-                  span on 10 Apr, Thu
-                p.tagline by AWS User Group Singapore
-            li
-              a(href='http://www.meetup.com/Hadoop-SG/events/174054202/')
-                p Hue presentation by Enrico Berti
-                  span on 10 Apr, Thu
-                p.tagline by Hadoop.SG
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/174835492/')
-                p Meetup #19: Automating Jenkins
-                  span on 10 Apr, Thu
-                p.tagline by DevOps Singapore
-            li
-              a(href='http://www.meetup.com/HASKELL-SG/events/173458152/')
-                p New Directions in String Interpolation
-                  span on 11 Apr, Fri
-                p.tagline by Haskell.SG
-            li
               a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
                 p PUGS April Meetup
                   span on 16 Apr, Wed
@@ -97,10 +72,20 @@ html(lang='en')
                   span on 17 Apr, Thu
                 p.tagline by iOS DevScout
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/174969372/')
+                p talk.js
+                  span on 21 Apr, Mon
+                p.tagline by Singapore JS
+            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
                 p R vs Python (Merged with Musings of a Kaggler)
                   span on 23 Apr, Wed
                 p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/175295472/')
+                p Apr/2014 - Open Space
+                  span on 23 Apr, Wed
+                p.tagline by Agile Singapore
             li
               a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
                 p R vs Python (Merged with Musings of a Kaggler)
@@ -116,6 +101,21 @@ html(lang='en')
                 p DataScience SG Meetup -Social Media Analytics
                   span on 26 Apr, Sat
                 p.tagline by DataScience SG
+            li
+              a(href='https://www.facebook.com/events/677139548999668')
+                p Front end developer meetup
+                  span on 28 Apr, Mon
+                p.tagline by Front End Developers Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/174440162/')
+                p April Meetup
+                  span on 29 Apr, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='https://www.facebook.com/events/263603767151991')
+                p Programming Clojure: Why and How by @Omer Iqbal
+                  span on 9 May, Fri
+                p.tagline by Hackers and Painters
 
 
         section
