--- a/views/index.jade
+++ b/views/index.jade
@@ -62,16 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/PUGS-Postgres-Users-Group-Singapore/events/172519482/')
-                p PUGS April Meetup
-                  span on 16 Apr, Wed
-                p.tagline by PUGS (Postgres Users Group Singapore)
-            li
-              a(href='https://www.facebook.com/events/380277858780590')
-                p iOS Dev Scout April Meetup
-                  span on 17 Apr, Thu
-                p.tagline by iOS DevScout
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/174969372/')
                 p talk.js
                   span on 21 Apr, Mon
@@ -92,6 +82,11 @@ html(lang='en')
                   span on 23 Apr, Wed
                 p.tagline by R User Group - Singapore (RUGS)
             li
+              a(href='https://www.facebook.com/events/823961817632232')
+                p Makers' Meetup: Learning to Make,Making to Learn
+                  span on 25 Apr, Fri
+                p.tagline by Singapore Makers
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171898992/')
                 p MOOC Study Group @ Data Science SG
                   span on 26 Apr, Sat
@@ -111,6 +106,11 @@ html(lang='en')
                 p April Meetup
                   span on 29 Apr, Tue
                 p.tagline by Singapore Ruby Group
+            li
+              a(href='https://www.facebook.com/events/1382226208697470')
+                p Singapore PHP User Group Meetup (April 2014)
+                  span on 30 Apr, Wed
+                p.tagline by Singapore PHP User Group
             li
               a(href='https://www.facebook.com/events/263603767151991')
                 p Programming Clojure: Why and How by @Omer Iqbal
