--- a/views/index.jade
+++ b/views/index.jade
@@ -62,16 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/174969372/')
-                p talk.js
-                  span on 21 Apr, Mon
-                p.tagline by Singapore JS
-            li
-              a(href='http://www.meetup.com/dribbble/Singapore-SG/1130662/')
-                p Let's meet in Singapore la! #2
-                  span on 22 Apr, Tue
-                p.tagline by Singapore Dribbble Community
-            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
                 p R vs Python (Merged with Musings of a Kaggler)
                   span on 23 Apr, Wed
@@ -121,6 +111,11 @@ html(lang='en')
                 p Programming Clojure: Why and How by @Omer Iqbal
                   span on 9 May, Fri
                 p.tagline by Hackers and Painters
+            li
+              a(href='http://www.eventbrite.com/e/hack-night-shells-and-environments-tickets-6925068065')
+                p Hack Night - Shells and Environments
+                  span on 29 May, Thu
+                p.tagline by Neo Singapore
 
 
         section
