--- a/views/index.jade
+++ b/views/index.jade
@@ -62,26 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
-                p R vs Python (Merged with Musings of a Kaggler)
-                  span on 23 Apr, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/175295472/')
-                p Apr/2014 - Open Space
-                  span on 23 Apr, Wed
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/160888602/')
-                p R vs Python (Merged with Musings of a Kaggler)
-                  span on 23 Apr, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/823961817632232')
-                p Makers' Meetup: Learning to Make,Making to Learn
-                  span on 25 Apr, Fri
-                p.tagline by Singapore Makers
-            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171898992/')
                 p MOOC Study Group @ Data Science SG
                   span on 26 Apr, Sat
@@ -106,6 +86,26 @@ html(lang='en')
                 p Singapore PHP User Group Meetup (April 2014)
                   span on 30 Apr, Wed
                 p.tagline by Singapore PHP User Group
+            li
+              a(href='http://sg.hackandtell.org/')
+                p Hack and Tell
+                  span on 1 May, Thu
+                p.tagline by SG Hack and Tell
+            li
+              a(href='https://www.facebook.com/events/1421654661427734')
+                p Be a Maker: Lets make a carnival game
+                  span on 3 May, Sat
+                p.tagline by Singapore Mini Maker Faire
+            li
+              a(href='http://www.meetup.com/Bubbly-TechTalks/events/178751552/')
+                p Scala and Reactive Programming Practice in Mobile Social Networks
+                  span on 5 May, Mon
+                p.tagline by Bubbly TechTalks
+            li
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/178965412/')
+                p May Meetup + Startup Asia SG
+                  span on 7 May, Wed
+                p.tagline by Singapore Android Developers
             li
               a(href='https://www.facebook.com/events/263603767151991')
                 p Programming Clojure: Why and How by @Omer Iqbal
