--- a/views/index.jade
+++ b/views/index.jade
@@ -62,36 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171898992/')
-                p MOOC Study Group @ Data Science SG
-                  span on 26 Apr, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/170832262/')
-                p DataScience SG Meetup -Social Media Analytics
-                  span on 26 Apr, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='https://www.facebook.com/events/677139548999668')
-                p Front end developer meetup
-                  span on 28 Apr, Mon
-                p.tagline by Front End Developers Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/174440162/')
-                p April Meetup
-                  span on 29 Apr, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='https://www.facebook.com/events/1382226208697470')
-                p Singapore PHP User Group Meetup (April 2014)
-                  span on 30 Apr, Wed
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='http://sg.hackandtell.org/')
-                p Hack and Tell
-                  span on 1 May, Thu
-                p.tagline by SG Hack and Tell
-            li
               a(href='https://www.facebook.com/events/1421654661427734')
                 p Be a Maker: Lets make a carnival game
                   span on 3 May, Sat
@@ -101,6 +71,11 @@ html(lang='en')
                 p Scala and Reactive Programming Practice in Mobile Social Networks
                   span on 5 May, Mon
                 p.tagline by Bubbly TechTalks
+            li
+              a(href='https://www.facebook.com/events/282376515263978')
+                p iOS Dev Scout May Meetup
+                  span on 5 May, Mon
+                p.tagline by iOS DevScout
             li
               a(href='http://www.meetup.com/Singapore-Android-Developers/events/178965412/')
                 p May Meetup + Startup Asia SG
@@ -112,11 +87,30 @@ html(lang='en')
                   span on 9 May, Fri
                 p.tagline by Hackers and Painters
             li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/171103862/')
+                p May Short Talks
+                  span on 14 May, Wed
+                p.tagline by R User Group - Singapore (RUGS)
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525552/')
+                p MOOC Study Group @ Data Science SG
+                  span on 24 May, Sat
+                p.tagline by DataScience SG
+            li
               a(href='http://www.eventbrite.com/e/hack-night-shells-and-environments-tickets-6925068065')
                 p Hack Night - Shells and Environments
                   span on 29 May, Thu
                 p.tagline by Neo Singapore
-
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
+                p DataScience SG Meetup
+                  span on 31 May, Sat
+                p.tagline by DataScience SG
+            li
+              a(href='https://www.eventbrite.com/e/matt-mullenweg-live-tickets-3836477006')
+                p Matt Mullenweg Live!
+                  span on 4 Jun, Wed
+                p.tagline by Singapore PHP Developers
 
         section
           h3 open source
