--- a/views/index.jade
+++ b/views/index.jade
@@ -62,38 +62,58 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/1421654661427734')
-                p Be a Maker: Lets make a carnival game
-                  span on 3 May, Sat
-                p.tagline by Singapore Mini Maker Faire
-            li
-              a(href='http://www.meetup.com/Bubbly-TechTalks/events/178751552/')
-                p Scala and Reactive Programming Practice in Mobile Social Networks
-                  span on 5 May, Mon
-                p.tagline by Bubbly TechTalks
-            li
-              a(href='https://www.facebook.com/events/282376515263978')
-                p iOS Dev Scout May Meetup
-                  span on 5 May, Mon
-                p.tagline by iOS DevScout
-            li
-              a(href='http://www.meetup.com/Singapore-Android-Developers/events/178965412/')
-                p May Meetup + Startup Asia SG
-                  span on 7 May, Wed
-                p.tagline by Singapore Android Developers
-            li
-              a(href='https://www.facebook.com/events/263603767151991')
-                p Programming Clojure: Why and How by @Omer Iqbal
-                  span on 9 May, Fri
-                p.tagline by Hackers and Painters
-            li
               a(href='http://www.meetup.com/R-User-Group-SG/events/171103862/')
                 p May Short Talks
                   span on 14 May, Wed
                 p.tagline by R User Group - Singapore (RUGS)
             li
+              a(href='https://www.facebook.com/events/1392245814329393')
+                p PCB Making with EAGLE CAD
+                  span on 14 May, Wed
+                p.tagline by Singapore Makers
+            li
+              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/182287712/')
+                p Code Dojo - Medicine Clash
+                  span on 14 May, Wed
+                p.tagline by Software Craftsmanship Singapore
+            li
+              a(href='https://www.facebook.com/events/620159901408494')
+                p Adobe InDesign and Adobe Muse!
+                  span on 15 May, Thu
+                p.tagline by Mark Plunkett
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/180863352/')
+                p Meetup #20: In Depth Chef
+                  span on 15 May, Thu
+                p.tagline by DevOps Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/181217212/')
+                p Ruby Pair Programming
+                  span on 17 May, Sat
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='https://www.facebook.com/events/1396569890628726')
+                p Cryptography
+                  span on 21 May, Sat
+                p.tagline by Singapore Hackerspace
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/180994282/')
+                p May Meetup
+                  span on 20 May, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/AWS-SG/events/181655622/')
+                p May Meetup
+                  span on 22 May, Thu
+                p.tagline by AWS User Group
+            li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525552/')
                 p MOOC Study Group @ Data Science SG
+                  span on 24 May, Sat
+                p.tagline by DataScience SG
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
+                p DataScience SG May Meetup
                   span on 24 May, Sat
                 p.tagline by DataScience SG
             li
@@ -101,6 +121,11 @@ html(lang='en')
                 p Hack Night - Shells and Environments
                   span on 29 May, Thu
                 p.tagline by Neo Singapore
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/182121552/')
+                p Coding Dojo: Legacy Code (C# and Java)
+                  span on 30 May, Thu
+                p.tagline by Agile Singapore
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
                 p DataScience SG Meetup
