--- a/views/index.jade
+++ b/views/index.jade
@@ -62,26 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/171103862/')
-                p May Short Talks
-                  span on 14 May, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='https://www.facebook.com/events/1392245814329393')
-                p PCB Making with EAGLE CAD
-                  span on 14 May, Wed
-                p.tagline by Singapore Makers
-            li
-              a(href='http://www.meetup.com/Software-Craftsmanship-Singapore/events/182287712/')
-                p Code Dojo - Medicine Clash
-                  span on 14 May, Wed
-                p.tagline by Software Craftsmanship Singapore
-            li
-              a(href='https://www.facebook.com/events/620159901408494')
-                p Adobe InDesign and Adobe Muse!
-                  span on 15 May, Thu
-                p.tagline by Mark Plunkett
-            li
               a(href='http://www.meetup.com/devops-singapore/events/180863352/')
                 p Meetup #20: In Depth Chef
                   span on 15 May, Thu
@@ -92,10 +72,20 @@ html(lang='en')
                   span on 17 May, Sat
                 p.tagline by Singapore Ruby Group
             li
+              a(href='https://www.facebook.com/events/624070074344816')
+                p Creative Crew May Talks
+                  span on 19 May, Mon
+                p.tagline by Creative Crew
+            li
               a(href='https://www.facebook.com/events/1396569890628726')
-                p Cryptography
-                  span on 21 May, Sat
+                p CryptoParty
+                  span on 21 May, Wed
                 p.tagline by Singapore Hackerspace
+            li
+              a(href='https://www.facebook.com/events/239611502907050')
+                p Singapore HCI May meeting: CHI 2014 Highlights
+                  span on 21 May, Wed
+                p.tagline by Singapore HCI
             li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/180994282/')
                 p May Meetup
@@ -117,6 +107,11 @@ html(lang='en')
                   span on 24 May, Sat
                 p.tagline by DataScience SG
             li
+              a(href='https://www.facebook.com/events/1434925793431531')
+                p Meetup #3
+                  span on 27 May, Tue
+                p.tagline by Singapore MongoDB User Group
+            li
               a(href='http://www.eventbrite.com/e/hack-night-shells-and-environments-tickets-6925068065')
                 p Hack Night - Shells and Environments
                   span on 29 May, Thu
@@ -136,6 +131,11 @@ html(lang='en')
                 p Matt Mullenweg Live!
                   span on 4 Jun, Wed
                 p.tagline by Singapore PHP Developers
+            li
+              a(href='https://www.facebook.com/events/514180752021513')
+                p iOS Dev Scout June Meetup
+                  span on 12 Jun, Thu
+                p.tagline by iOS DevScout
 
         section
           h3 open source
