events and next live show

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,21 +61,17 @@ html(lang='en')
           h3 open events
           ul.open-list.first
 
-            li
-              a(href='http://www.meetup.com/devops-singapore/events/180863352/')
-                p Meetup #20: In Depth Chef
-                  span on 15 May, Thu
-                p.tagline by DevOps Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/181217212/')
-                p Ruby Pair Programming
-                  span on 17 May, Sat
-                p.tagline by Singapore Ruby Group
+
             li
               a(href='https://www.facebook.com/events/624070074344816')
                 p Creative Crew May Talks
                   span on 19 May, Mon
                 p.tagline by Creative Crew
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/180994282/')
+                p May Meetup
+                  span on 20 May, Tue
+                p.tagline by Singapore Ruby Group
             li
               a(href='https://www.facebook.com/events/1396569890628726')
                 p CryptoParty
@@ -87,15 +83,20 @@ html(lang='en')
                   span on 21 May, Wed
                 p.tagline by Singapore HCI
             li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/180994282/')
-                p May Meetup
-                  span on 20 May, Tue
-                p.tagline by Singapore Ruby Group
+              a(href='https://www.facebook.com/events/326773447469936/')
+                p First Singapore Gophers Meetup
+                  span on 21 May, Wed
+                p.tagline by Singapore Gophers
             li
               a(href='http://www.meetup.com/AWS-SG/events/181655622/')
                 p May Meetup
                   span on 22 May, Thu
                 p.tagline by AWS User Group
+            li
+              a(href='https://www.facebook.com/events/452116294921796/')
+                p Embracing Innovation through Design Thinking ( Design Thinking Talk )
+                  span on 23 May, Fri
+                p.tagline by hackerspace SG
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525552/')
                 p MOOC Study Group @ Data Science SG
@@ -119,7 +120,7 @@ html(lang='en')
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/182121552/')
                 p Coding Dojo: Legacy Code (C# and Java)
-                  span on 30 May, Thu
+                  span on 30 May, Fri
                 p.tagline by Agile Singapore
             li
               a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
