--- a/views/index.jade
+++ b/views/index.jade
@@ -60,52 +60,15 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-
             li
-              a(href='https://www.facebook.com/events/624070074344816')
-                p Creative Crew May Talks
-                  span on 19 May, Mon
-                p.tagline by Creative Crew
+              a(href='http://www.meetup.com/HASKELL-SG/events/183232992/')
+                p Programming with pipes (by Mihály Bárász)
+                  span on 26 May, Mon
+                p.tagline by Haskell.SG
             li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/180994282/')
-                p May Meetup
-                  span on 20 May, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='https://www.facebook.com/events/1396569890628726')
-                p CryptoParty
-                  span on 21 May, Wed
-                p.tagline by Singapore Hackerspace
-            li
-              a(href='https://www.facebook.com/events/239611502907050')
-                p Singapore HCI May meeting: CHI 2014 Highlights
-                  span on 21 May, Wed
-                p.tagline by Singapore HCI
-            li
-              a(href='https://www.facebook.com/events/326773447469936/')
-                p First Singapore Gophers Meetup
-                  span on 21 May, Wed
-                p.tagline by Singapore Gophers
-            li
-              a(href='http://www.meetup.com/AWS-SG/events/181655622/')
-                p May Meetup
-                  span on 22 May, Thu
-                p.tagline by AWS User Group
-            li
-              a(href='https://www.facebook.com/events/452116294921796/')
-                p Embracing Innovation through Design Thinking ( Design Thinking Talk )
-                  span on 23 May, Fri
-                p.tagline by hackerspace SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525552/')
-                p MOOC Study Group @ Data Science SG
-                  span on 24 May, Sat
-                p.tagline by DataScience SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
-                p DataScience SG May Meetup
-                  span on 24 May, Sat
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/184295882/')
+                p Unstructured Data Mining: Text Mining Analysis of Wind Turbine Accidents
+                  span on 26 May, Mon
                 p.tagline by DataScience SG
             li
               a(href='https://www.facebook.com/events/1434925793431531')
@@ -118,8 +81,23 @@ html(lang='en')
                   span on 29 May, Thu
                 p.tagline by Neo Singapore
             li
+              a(href='https://www.facebook.com/events/1409045022708727')
+                p Building web apps with Martini-go and Gorm
+                  span on 30 May, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/322821427870239')
+                p IP Consult Session: 3D Printing
+                  span on 30 May, Fri
+                p.tagline by Singapore Makers
+            li
               a(href='http://www.meetup.com/Agile-Singapore/events/182121552/')
                 p Coding Dojo: Legacy Code (C# and Java)
+                  span on 30 May, Fri
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/178148642/')
+                p May/2014 - Open Space
                   span on 30 May, Fri
                 p.tagline by Agile Singapore
             li
@@ -137,6 +115,26 @@ html(lang='en')
                 p iOS Dev Scout June Meetup
                   span on 12 Jun, Thu
                 p.tagline by iOS DevScout
+            li
+              a(href='https://www.facebook.com/events/518584511581520')
+                p REST API best practices
+                  span on 13 Jun, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/184282842/')
+                p Ruby Pair Programming
+                  span on 14 Jun, Sat
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/174971982/')
+                p NodeSchool Singapore
+                  span on 15 Jun, Sun
+                p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/184248862/')
+                p June Meetup
+                  span on 17 Jun, Tue
+                p.tagline by Singapore JS
 
         section
           h3 open source
