--- a/views/index.jade
+++ b/views/index.jade
@@ -61,51 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/HASKELL-SG/events/183232992/')
-                p Programming with pipes (by Mihály Bárász)
-                  span on 26 May, Mon
-                p.tagline by Haskell.SG
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/184295882/')
-                p Unstructured Data Mining: Text Mining Analysis of Wind Turbine Accidents
-                  span on 26 May, Mon
-                p.tagline by DataScience SG
-            li
-              a(href='https://www.facebook.com/events/1434925793431531')
-                p Meetup #3
-                  span on 27 May, Tue
-                p.tagline by Singapore MongoDB User Group
-            li
-              a(href='http://www.eventbrite.com/e/hack-night-shells-and-environments-tickets-6925068065')
-                p Hack Night - Shells and Environments
-                  span on 29 May, Thu
-                p.tagline by Neo Singapore
-            li
-              a(href='https://www.facebook.com/events/1409045022708727')
-                p Building web apps with Martini-go and Gorm
-                  span on 30 May, Fri
-                p.tagline by Hackers and Painters
-            li
-              a(href='https://www.facebook.com/events/322821427870239')
-                p IP Consult Session: 3D Printing
-                  span on 30 May, Fri
-                p.tagline by Singapore Makers
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/182121552/')
-                p Coding Dojo: Legacy Code (C# and Java)
-                  span on 30 May, Fri
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/178148642/')
-                p May/2014 - Open Space
-                  span on 30 May, Fri
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/171899412/')
-                p DataScience SG Meetup
-                  span on 31 May, Sat
-                p.tagline by DataScience SG
-            li
               a(href='https://www.eventbrite.com/e/matt-mullenweg-live-tickets-3836477006')
                 p Matt Mullenweg Live!
                   span on 4 Jun, Wed
@@ -126,6 +81,11 @@ html(lang='en')
                   span on 14 Jun, Sat
                 p.tagline by Singapore Ruby Group
             li
+              a(href='http://www.meetup.com/Singapore-JS/events/186094192/')
+                p Become a mentor for NodeSchool Singapore
+                  span on 14 Jun, Sat
+                p.tagline by Singapore JS
+            li
               a(href='http://www.meetup.com/Singapore-JS/events/174971982/')
                 p NodeSchool Singapore
                   span on 15 Jun, Sun
@@ -135,6 +95,26 @@ html(lang='en')
                 p June Meetup
                   span on 17 Jun, Tue
                 p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/1409045022708727')
+                p Building web apps with Martini-go and Gorm
+                  span on 20 Jun, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='https://www.facebook.com/events/504465599653109')
+                p Personal Finance for Hackers (& Painters)
+                  span on 27 Jun, Fri
+                p.tagline by Hackers and Painters
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525612/')
+                p MOOC Study Group @ Data Science SG
+                  span on 28 Jun, Sat
+                p.tagline by DataScience SG
+            li
+              a(href='http://www.meetup.com/DataScience-SG-Singapore/events/172525632/')
+                p DataScience SG Meetup
+                  span on 28 Jun, Sat
+                p.tagline by DataScience SG
 
         section
           h3 open source
