--- a/views/index.jade
+++ b/views/index.jade
@@ -66,6 +66,11 @@ html(lang='en')
                   span on 4 Jun, Wed
                 p.tagline by Singapore PHP Developers
             li
+              a(href='https://www.facebook.com/events/297084807127371/')
+                p Creative Crew June Talks
+                  span on 10 Jun, Tue
+                p.tagline by Creative Crew
+            li
               a(href='https://www.facebook.com/events/514180752021513')
                 p iOS Dev Scout June Meetup
                   span on 12 Jun, Thu
